@@ -27,22 +27,22 @@ class Config
       void set(const std::string&, const std::string&,
                const std::string&, bool = true);
 
+      std::string option(const std::string&) const;
       u32bit option_as_u32bit(const std::string&) const;
       u32bit option_as_time(const std::string&) const;
       bool option_as_bool(const std::string&) const;
       std::vector<std::string> option_as_list(const std::string&) const;
 
+      void set_option(const std::string, const std::string&);
+
       void add_alias(const std::string&, const std::string&);
       std::string deref_alias(const std::string&) const;
-
-      std::string option(const std::string&) const;
 
       void load_inifile(const std::string&);
 
       static void choose_sig_format(const std::string&, std::string&,
                                     Signature_Format&);
    private:
-
       std::map<std::string, std::string> settings;
    };
 
