@@ -5,7 +5,7 @@
 
 #include <botan/filter.h>
 #include <botan/secqueue.h>
-#include <botan/ui.h>
+#include <botan/libstate.h>
 
 namespace Botan {
 
@@ -25,7 +25,7 @@ Filter::Filter()
 *************************************************/
 void Filter::send(const byte input[], u32bit length)
    {
-   UI::pulse(UI::PIPE_WRITE);
+   global_state().pulse(PIPE_WRITE);
 
    bool nothing_attached = true;
    for(u32bit j = 0; j != total_ports(); ++j)
