@@ -292,6 +292,24 @@ X509_GlobalState& Library_State::x509_state()
    }
 
 /*************************************************
+* Set the UI object state                        *
+*************************************************/
+void Library_State::set_ui(UI* new_ui)
+   {
+   delete ui;
+   ui = new_ui;
+   }
+
+/*************************************************
+* Send a pulse to the UI object                  *
+*************************************************/
+void Library_State::pulse(Pulse_Type pulse_type) const
+   {
+   if(ui)
+      ui->pulse(pulse_type);
+   }
+
+/*************************************************
 * Set the configuration object                   *
 *************************************************/
 Config& Library_State::config() const
@@ -348,6 +366,7 @@ Library_State::Library_State(Mutex_Factory* mutex_factory)
    rng = 0;
    cached_default_allocator = 0;
    x509_state_obj = 0;
+   ui = 0;
    }
 
 /*************************************************
@@ -360,6 +379,7 @@ Library_State::~Library_State()
    delete rng;
    delete timer;
    delete config_obj;
+   delete ui;
 
    std::for_each(entropy_sources.begin(), entropy_sources.end(),
                  del_fun<EntropySource>());
