@@ -4,6 +4,7 @@
 *************************************************/
 
 #include <botan/ui.h>
+#include <botan/libstate.h>
 
 namespace Botan {
 
@@ -30,33 +31,5 @@ User_Interface::User_Interface(const std::string& preset) :
    {
    first_try = true;
    }
-
-namespace UI {
-
-/*************************************************
-* The current pulse function                     *
-*************************************************/
-pulse_func pulse_f = 0;
-void* pulse_f_data = 0;
-
-/*************************************************
-* Set the UI pulse function                      *
-*************************************************/
-void set_pulse(pulse_func p, void* p_data)
-   {
-   pulse_f = p;
-   pulse_f_data = p_data;
-   }
-
-/*************************************************
-* Call the UI pulse function                     *
-*************************************************/
-void pulse(Pulse_Type type)
-   {
-   if(pulse_f)
-      pulse_f(type, pulse_f_data);
-   }
-
-}
 
 }
