@@ -4,7 +4,6 @@
 *************************************************/
 
 #include <botan/x509_ext.h>
-#include <botan/x509cert.h>
 #include <botan/x509stat.h>
 #include <botan/libstate.h>
 #include <botan/der_enc.h>
