@@ -1,4 +1,10 @@
+2006-12-18  Matt Johnston  <matt@ucc.asn.au>
+
+	* botan/: Update to Botan 1.6.0, add botan/README.botan-monotone
+	with maintainence details.
+
 2006-12-16  Matt Johnston  <matt@ucc.asn.au>
+
 	* cmd_list.cc: ls_known, ls_changed: sort path output.
 
 2006-12-15  Nathaniel Smith  <njs@pobox.com>
